# claude-manager

./: .gitignore  AGENTS.md  CLAUDE.md  COMMANDS.md  DESIGN_feishu_bridge.md  DESIGN_feishu_terminal_hub.md  README.md
.serena/: project.yml
kitty-enhance/: COLOR_SCHEME.md  KITTY_SETUP.md  install.sh  shell-functions.sh  uninstall.sh
kitty-enhance/feishu-bridge/: command_handler.py  config.yaml  config_example.yaml  daemon.py  feishu_client.py  kitty_responder.py  requirements.txt  setup.sh  terminal_registry.py
kitty-enhance/hooks/: feishu-register.sh  on-notify.sh  on-permission-pending.sh  on-stop.sh  on-tool-use.sh  tab-color-common.sh
kitty-enhance/scripts/: codex-completed.sh  codex-event-monitor.py  codex-working.sh  on-bell.sh  quick-rename-tab.sh  rename-tab.sh  reset-tab-color.sh  session-snapshot.py
manager/: QUICK_DEBUG.md  STATUS_DETECTION.md  STATUS_SUMMARY_EXAMPLE.md  agent-terminals  claude-manager-tabs  install.sh  pyproject.toml  watch_logs.sh
manager/src/claude_manager/: __init__.py  app.py  cli.py  config.py  data_store.py  kitty_control.py  launcher.py  models.py  process_monitor.py  tmux_control.py
manager/src/claude_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
manager/src/claude_manager/tabs/: __init__.py  cli.py  interactive.py  kitty.py  registry.py
manager/src/claude_manager/terminal/: __init__.py  adapter.py  detector.py  kitty_adapter.py  terminator_adapter.py  terminator_layouts.py  tmux_split_adapter.py  xterm_adapter.py
manager/tests/: test_models.py  test_tabs.py
(+13 files in other folders)
